--- a/prospectus2024.html
+++ b/prospectus2024.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Mirrored from live.themewild.com/edubo/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 May 2024 05:23:34 GMT -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -20,6 +19,15 @@
     <link rel="stylesheet" href="assets/css/magnific-popup.min.css" />
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <style>
+      body {
+        -webkit-user-select: none; /* Disable selection/copy in Safari */
+        -moz-user-select: none; /* Disable selection/copy in Firefox */
+        -ms-user-select: none; /* Disable selection/copy in IE10+ */
+        user-select: none; /* Disable selection/copy in the latest browsers */
+        -webkit-touch-callout: none; /* Disable callout, image save panel in iOS */
+      }
+    </style>
   </head>
   <body>
     <div class="preloader">
@@ -37,19 +45,6 @@
             <div class="header-top-left">
               <div class="header-top-contact">
                 <ul>
-                  <!-- <li>
-                    <div class="header-top-contact-icon">
-                      <img src="assets/img/icon/location.svg" alt="Location Icon" />
-                    </div>
-                    <div class="header-top-contact-info">
-                      <h6>Address</h6>
-                      <a href="https://www.google.com/maps/place/Malabar+Dental+College+%26+Research+Centre/@10.8111693,76.0260762,17z/data=!3m1!4b1!4m6!3m5!1s0x3ba7b9b0bbc3a929:0xb8791dc1538b2a2e!8m2!3d10.8111693!4d76.0286565!16s%2Fg%2F113dkc2yc?entry=ttu"
-                        target="_blank"
-                        >Manoor - Chekanoor Road,<br/> Manoor, Edappal,<br/> Malappuram,
-                        Kerala 679578
-                      </a>
-                    </div>
-                  </li> -->
                   <li>
                     <div class="header-top-contact-icon">
                       <img src="assets/img/icon/mail.svg" alt="Mail Icon" />
@@ -76,8 +71,6 @@
                 <span>Follow Us: </span>
                 <a href="http://www.facebook.com/MalabarCollegeofPharmacy"><i class="fab fa-facebook-f"></i></a>
                 <a href="http://www.instagram.com/malabar_college_of_pharmacy"><i class="fab fa-instagram"></i></a>
-                <!-- <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a> -->
               </div>
             </div>
           </div>
@@ -87,15 +80,9 @@
         <nav class="navbar navbar-expand-lg">
           <div class="container position-relative">
             <a class="navbar-brand" href="/">
-              <!-- <img src="assets/img/logo/logo.png" alt="logo" /> -->
               <span>Malabar College of Pharmacy</span>
             </a>
             <div class="mobile-menu-right">
-              <!-- <div class="search-btn">
-                <button type="button" class="nav-right-link search-box-outer">
-                  <i class="far fa-search"></i>
-                </button>
-              </div> -->
               <button
                 class="navbar-toggler"
                 type="button"
@@ -113,11 +100,6 @@
               <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                   <a class="nav-link active" href="/">Home</a>
-                  <!-- <ul class="dropdown-menu fade-down">
-<li><a class="dropdown-item" href="index-2.html">Home Page 01</a></li>
-<li><a class="dropdown-item" href="index-3.html">Home Page 02</a></li>
-<li><a class="dropdown-item" href="index-4.html">Home Page 03</a></li>
-</ul> -->
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="#about-us">About Us</a>
@@ -131,194 +113,9 @@
                   </ul>
                 </li>
 
-
-                <!-- <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#careers" data-bs-toggle="dropdown">Admission</a>
-                  <ul class="dropdown-menu fade-down">
-                    <li class="dropdown-submenu">
-                      <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown">Prospects</a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="index-2.html">Home Page 01</a></li>
-                        <li><a class="dropdown-item" href="index-3.html">Home Page 02</a></li>
-                        <li><a class="dropdown-item" href="index-4.html">Home Page 03</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li> -->
-
-
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="#courses">Courses</a>
-                  <!-- <ul class="dropdown-menu fade-down">
-<li><a class="dropdown-item" href="course.html">Courses One</a></li>
-<li><a class="dropdown-item" href="course-2.html">Courses Two</a></li>
-<li><a class="dropdown-item" href="course-single.html">Course Single One</a></li>
-<li><a class="dropdown-item" href="course-single-2.html">Course Single Two</a></li>
-</ul> -->
                 </li>
-                <li class="nav-item mega-menu dropdown">
-                  <!-- <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Academics</a> -->
-                  <!-- <div class="dropdown-menu fade-down">
-<div class="mega-content">
-<div class="container-fluid">
-<div class="row">
-<div class="col-12 col-sm-4 col-md-3">
-<h5>About Us</h5>
-<div class="menu-about">
-<a href="#" class="menu-about-logo"><img src="assets/img/logo/logo-light.png" alt></a>
-<p>We are many variations of passages available but the majority
-have suffered alteration in some form by injected humour
-words injected humour believable.</p>
-</div>
-</div>
-<div class="col-12 col-sm-4 col-md-3">
-<h5>Undergraduate</h5>
-<ul class="mega-menu-item">
-<li><a class="dropdown-item" href="academic-single.html">Art And
-Design</a></li>
-<li><a class="dropdown-item" href="academic-single.html">Acting
-And Drama</a></li>
-<li><a class="dropdown-item" href="academic-single.html">Accounting And Finance</a>
-</li>
-<li><a class="dropdown-item" href="academic-single.html">Biology
-And Conservation</a></li>
-<li><a class="dropdown-item" href="academic-single.html">Science
-And Engineering</a></li>
-</ul>
-</div>
-<div class="col-12 col-sm-4 col-md-3">
-<h5>Graduate Program</h5>
-<ul class="mega-menu-item">
-<li><a class="dropdown-item" href="academic-single.html">Software Systems</a></li>
-<li><a class="dropdown-item" href="academic-single.html">Human
-Resource</a></li>
-<li><a class="dropdown-item" href="academic-single.html">Health
-Administration</a></li>
-<li><a class="dropdown-item" href="academic-single.html">Biochemistry</a></li>
-<li><a class="dropdown-item" href="academic-single.html">Computer Science</a></li>
-</ul>
-</div>
-<div class="col-12 col-sm-12 col-md-3">
-<h5>Resources</h5>
-<ul class="mega-menu-item">
-<li><a class="dropdown-item" href="academic.html">Academics
-Department</a></li>
-<li><a class="dropdown-item" href="academic-single.html">Academic Department
-Single</a></li>
-<li><a class="dropdown-item" href="faculty.html">Our Faculty</a>
-</li>
-<li><a class="dropdown-item" href="faculty-single.html">Faculty
-Single</a></li>
-<li><a class="dropdown-item" href="contact.html">Contact With
-Us</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
-</li> -->
-                  <!-- <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Pages</a>
-<ul class="dropdown-menu fade-down">
-<li><a class="dropdown-item" href="about.html">About Us</a></li>
-<li class="dropdown-submenu">
-<a class="dropdown-item dropdown-toggle" href="#">Events</a>
-<ul class="dropdown-menu">
-<li><a class="dropdown-item" href="event.html">Events</a></li>
-<li><a class="dropdown-item" href="event-single.html">Event Single</a></li>
-</ul>
-</li>
-<li class="dropdown-submenu">
-<a class="dropdown-item dropdown-toggle" href="#">Portfolio</a>
-<ul class="dropdown-menu">
-<li><a class="dropdown-item" href="portfolio.html">Portfolio</a></li>
-<li><a class="dropdown-item" href="portfolio-single.html">Portfolio
-Single</a></li>
-</ul>
-</li>
-<li class="dropdown-submenu">
-<a class="dropdown-item dropdown-toggle" href="#">Teachers</a>
-<ul class="dropdown-menu">
-<li><a class="dropdown-item" href="teacher.html">Teachers One</a></li>
-<li><a class="dropdown-item" href="teacher-2.html">Teachers Two</a></li>
-<li><a class="dropdown-item" href="teacher-single.html">Teachers Single</a>
-</li>
-</ul>
-</li>
-<li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
-<li class="dropdown-submenu">
-<a class="dropdown-item dropdown-toggle" href="#">Authentication</a>
-<ul class="dropdown-menu">
-<li><a class="dropdown-item" href="login.html">Login</a></li>
-<li><a class="dropdown-item" href="register.html">Register</a></li>
-<li><a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
-</li>
-</ul>
-</li>
-<li><a class="dropdown-item" href="pricing.html">Pricing Plan</a></li>
-<li><a class="dropdown-item" href="faq.html">Faq</a></li>
-<li><a class="dropdown-item" href="testimonial.html">Testimonials</a></li>
-<li><a class="dropdown-item" href="404.html">404 Error</a></li>
-<li><a class="dropdown-item" href="coming-soon.html">Coming Soon</a></li>
-<li><a class="dropdown-item" href="terms.html">Terms Of Service</a></li>
-<li><a class="dropdown-item" href="privacy.html">Privacy Policy</a></li>
-</ul>
-</li> -->
-                  <!-- <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Admissions</a>
-<ul class="dropdown-menu fade-down">
-<li><a class="dropdown-item" href="how-to-apply.html">How To Apply</a></li>
-<li><a class="dropdown-item" href="application-form.html">Application Form</a></li>
-<li class="dropdown-submenu">
-<a class="dropdown-item dropdown-toggle" href="#">Our Campus</a>
-<ul class="dropdown-menu">
-<li><a class="dropdown-item" href="campus-tour.html">Campus Tour</a></li>
-<li><a class="dropdown-item" href="campus-life.html">Campus Life</a></li>
-<li><a class="dropdown-item" href="notice-board.html">Notice Board</a></li>
-<li><a class="dropdown-item" href="student-activities.html">Student
-Activities</a></li>
-</ul>
-</li>
-<li class="dropdown-submenu">
-<a class="dropdown-item dropdown-toggle" href="#">Our Facilities</a>
-<ul class="dropdown-menu">
-<li><a class="dropdown-item" href="facility.html">Facilities</a></li>
-<li><a class="dropdown-item" href="facility-single.html">Facility Single</a></li>
-</ul>
-</li>
-<li class="dropdown-submenu">
-<a class="dropdown-item dropdown-toggle" href="#">Our Research</a>
-<ul class="dropdown-menu">
-<li><a class="dropdown-item" href="research.html">Research</a></li>
-<li><a class="dropdown-item" href="research-single.html">Research Single</a>
-</li>
-</ul>
-</li>
-<li class="dropdown-submenu">
-<a class="dropdown-item dropdown-toggle" href="#">Our Clubs</a>
-<ul class="dropdown-menu">
-<li><a class="dropdown-item" href="club.html">Our Clubs</a></li>
-<li><a class="dropdown-item" href="club-single.html">Club Single</a></li>
-</ul>
-</li>
-<li><a class="dropdown-item" href="tuition-fee.html">Tuition Fees</a></li>
-<li><a class="dropdown-item" href="alumni.html">Alumni</a></li>
-<li><a class="dropdown-item" href="scholarship.html">Scholarships</a></li>
-<li><a class="dropdown-item" href="our-fund.html">Our Fund</a></li>
-<li><a class="dropdown-item" href="athletics.html">Athletics</a></li>
-<li><a class="dropdown-item" href="health-care.html">Health Care</a></li>
-</ul>
-</li> -->
-                </li>
-
-                <!-- <li class="nav-item dropdown">
-                  <a class="nav-link" href="#blog">Blog</a> -->
-                  <!-- <ul class="dropdown-menu fade-down">
-<li><a class="dropdown-item" href="blog.html">Blog</a></li>
-<li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
-</ul> -->
-                <!-- </li> -->
                 <li class="nav-item">
                   <a class="nav-link" href="#contact-us">Contact</a>
                 </li>
@@ -327,11 +124,6 @@ Activities</a></li>
                 </li>
               </ul>
               <div class="nav-right">
-                <!-- <div class="search-btn">
-                  <button type="button" class="nav-right-link search-box-outer">
-                    <i class="far fa-search"></i>
-                  </button>
-                </div> -->
                 <div class="nav-right-btn mt-2">
                   <a href="login.html" class="theme-btn"
                     ><span class="fal fa-pencil"></span>Apply Now</a
@@ -594,14 +386,6 @@ Activities</a></li>
         <div class="row footer-widget-wrapper pt-100 pb-70">
           <div class="col-md-6 col-lg-4">
             <div class="footer-widget-box about-us">
-              <!-- <a href="/" class="footer-logo">
-                <span style="font-size: larger; color: #125875; font-weight: bolder;">Malabar College of Pharmacy</span>
-              </a> -->
-              <!-- <p class="mb-3">
-                We are many variations of passages available but the majority
-                have suffered alteration in some form by injected humour words
-                believable.
-              </p> -->
               <h4 class="footer-widget-title">Contact Us</h4>
               <ul class="footer-contact">
                 <li>
@@ -628,71 +412,14 @@ Activities</a></li>
                 <li>
                   <a href="#about-us"><i class="fas fa-caret-right"></i> About Us</a>
                 </li>
-                <!-- <li>
-                  <a href="#"><i class="fas fa-caret-right"></i> FAQ's</a>
-                </li> -->
                 <li>
                   <a href="#testimonial"
                     ><i class="fas fa-caret-right"></i> Testimonials</a
                   >
                 </li>
-                <!-- <li>
-                  <a href="#"
-                    ><i class="fas fa-caret-right"></i> Terms Of Service</a
-                  >
-                </li>
-                <li>
-                  <a href="#"
-                    ><i class="fas fa-caret-right"></i> Privacy policy</a
-                  >
-                </li> -->
-                <!-- <li>
-                  <a href="#"
-                    ><i class="fas fa-caret-right"></i> Update News</a
-                  >
-                </li> -->
               </ul>
             </div>
           </div>
-          <!-- <div class="col-md-6 col-lg-3">
-                      <div class="footer-widget-box list">
-                        <h4 class="footer-widget-title">Our Campus</h4>
-                        <ul class="footer-list">
-                          <li>
-                            <a href="#"
-                              ><i class="fas fa-caret-right"></i> Campus Safety</a
-                            >
-                          </li>
-                          <li>
-                            <a href="#"
-                              ><i class="fas fa-caret-right"></i> Student Activities</a
-                            >
-                          </li>
-                          <li>
-                            <a href="#"
-                              ><i class="fas fa-caret-right"></i> Academic Department</a
-                            >
-                          </li>
-                          <li>
-                            <a href="#"
-                              ><i class="fas fa-caret-right"></i> Planning &
-                              Administration</a
-                            >
-                          </li>
-                          <li>
-                            <a href="#"
-                              ><i class="fas fa-caret-right"></i> Office Of The
-                              Chancellor</a
-                            >
-                          </li>
-                          <li>
-                            <a href="#"
-                              ><i class="fas fa-caret-right"></i> Facility Services</a
-                            >
-                          </li>
-                        </ul>
-                      </div>
-                    </div> -->
           <div class="col-md-6 col-lg-3">
             <div class="footer-widget-box list">
               <h4 class="footer-widget-title">Newsletter</h4>
@@ -734,15 +461,6 @@ Activities</a></li>
                 <li>
                   <a href="http://www.instagram.com/malabar_college_of_pharmacy"><i class="fab fa-instagram"></i></a>
                 </li>
-                <!-- <li>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-youtube"></i></a>
-                </li> -->
               </ul>
             </div>
           </div>
@@ -771,7 +489,4 @@ Activities</a></li>
   <script src="assets/js/main.js"></script>
 
 </body>
-
-<!-- Mirrored from live.themewild.com/edubo/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 May 2024 05:25:42 GMT -->
 </html>
-
