--- a/index.html
+++ b/index.html
@@ -1771,7 +1771,9 @@ Activities</a></li>
               <div class="testimonial-rate">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i the="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
               </div>
               <div class="testimonial-quote">
                 <p>
