--- a/register.html
+++ b/register.html
@@ -160,9 +160,12 @@
                                 <label>Email Address</label>
                                 <input type="email" class="form-control" placeholder="Your Email" required>
                             </div>
-                            <div class="form-group">
-                                <label>Password</label>
-                                <input type="password" class="form-control" placeholder="Your Password" required>
+                            <div class="form-group position-relative">
+                              <label>Password</label>
+                                <input type="password" class="form-control" placeholder="Your Password" required id="password">
+                                <span id="togglePassword" style="position: absolute; right: 10px; top: 44px; cursor: pointer;">
+                                  <i class="fas fa-eye" id="togglePasswordIcon"></i>
+                              </span>
                             </div>
                             <div class="d-flex align-items-center">
                                 <button type="submit" class="theme-btn"><i class="far fa-paper-plane"></i>
@@ -220,6 +223,16 @@
           const otpSpinner = document.getElementById("otpSpinner");
           const resendOtpLink = document.getElementById("resendOtpLink");
           let userEmail = '';
+
+                  // Toggle password visibility
+        document.getElementById('togglePassword').addEventListener('click', function() {
+            const passwordInput = document.getElementById('password');
+            const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+            passwordInput.setAttribute('type', type);
+            // toggle the eye / eye-slash icon
+            this.querySelector('i').classList.toggle('fa-eye');
+            this.querySelector('i').classList.toggle('fa-eye-slash');
+        });
 
           registerForm.addEventListener("submit", function(event) {
             event.preventDefault();
