--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                   <i class="far fa-search"></i>
                 </button>
               </div> -->
-              <div class="nav-right-btn mt-2">
+              <!-- <div class="nav-right-btn mt-2">
                 <a href="login.html" class="theme-btn" style="padding: 8px 10px;">
                  </span>Apply Now
                 </a>
-              </div>
+              </div> -->
 
               <button
                 class="navbar-toggler"
@@ -338,11 +338,11 @@ Activities</a></li>
                     <i class="far fa-search"></i>
                   </button>
                 </div> -->
-                <div class="nav-right-btn mt-2">
+                <!-- <div class="nav-right-btn mt-2">
                   <a href="login.html" class="theme-btn"
                     ><span class="fal fa-pencil"></span>Apply Now</a
                   >
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -557,12 +557,11 @@ Activities</a></li>
         </div>
       </div> -->
       <div class="marquee">
-        <a href="admission.html">Admissions Now Open for the New Academic Year – Click Here to Apply and Learn More About Our Programs!</a>
+        <a href="admission.html">Click here to Learn About Admission and Important Dates!</a>
       </div>
-
-      <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
+      <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
         <p style="margin: 0; color: #333;"><strong>Prospectus published!</strong> <a href="/prospectus2024.html" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
-      </div>
+      </div> -->
 
       <div class="about-area py-120" id="about-us">
         <div class="container">
@@ -1339,7 +1338,7 @@ Activities</a></li>
               <div class="col-lg-5 ms-lg-auto">
                 <div class="cta-content">
                   <h1>Explore Career Opportunities at Malabar College of Pharmacy</h1>
-                  <p>
+                <p>
                     We invite individuals from various fields to apply and contribute to our educational mission at Malabar College of Pharmacy.
                   </p>
                   <div class="cta-btn">
@@ -2105,7 +2104,7 @@ Activities</a></li>
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center"><span>Last updated on 08-11-2024</span>
+              <div class="col-md-6 align-self-center"><span>Last updated on 17-11-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
