--- a/admission.html
+++ b/admission.html
@@ -127,7 +127,7 @@
                     <a class="nav-link dropdown-toggle active" href="" data-bs-toggle="dropdown">Admission</a>
                     <ul class="dropdown-menu fade-down">
                           <!-- <li><a class="dropdown-item" href="admission.html">Admission</a></li> -->
-                          <li><a class="dropdown-item" href="/assets/docs/MALABAR COLLEGE OF PROSPECTUS (2024-25).pdf" target="_blank" rel="noopener noreferrer">Prospects</a></li>
+                          <li><a class="dropdown-item" href="/prospectus2024.html" target="_blank" rel="noopener noreferrer">Prospects</a></li>
                     </ul>
                   </li>
   
@@ -332,11 +332,11 @@
                       <i class="far fa-search"></i>
                     </button>
                   </div> -->
-                  <div class="nav-right-btn mt-2">
+                  <!-- <div class="nav-right-btn mt-2">
                     <a href="login.html" class="theme-btn"
                       ><span class="fal fa-pencil"></span>Apply Now</a
                     >
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -453,7 +453,7 @@
                         <td>Issue of Application</td>
                         <td class="d-flex flex-column flex-md-row justify-content-md-between align-items-start">
                           <span>08.11.2024</span>
-                          <a href="login.html" class="btn btn-primary mt-2 mt-md-0">Apply Now</a>
+                          <!-- <a href="login.html" class="btn btn-primary mt-2 mt-md-0">Apply Now</a> -->
                         </td>
                       </tr>
                       <tr>
@@ -601,11 +601,11 @@
                     </table>
                   </div>
                 </div>
-                <div class="apply-now-btn mt-4 text-end">
+                <!-- <div class="apply-now-btn mt-4 text-end">
                   <a href="login.html" class="theme-btn"
                     ><span class="fal fa-pencil"></span>Apply Now</a
                   >
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -748,7 +748,7 @@
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center"><span>Last updated on 08-11-2024</span>
+              <div class="col-md-6 align-self-center"><span>Last updated on 17-11-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
