--- a/prospectus2024.html
+++ b/prospectus2024.html
@@ -123,13 +123,13 @@
                   <a class="nav-link" href="/careers.html">Careers</a>
                 </li>
               </ul>
-              <div class="nav-right">
+              <!-- <div class="nav-right">
                 <div class="nav-right-btn mt-2">
                   <a href="login.html" class="theme-btn"
                     ><span class="fal fa-pencil"></span>Apply Now</a
                   >
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </nav>
@@ -447,7 +447,7 @@
       <div class="container">
         <div class="copyright-wrapper">
           <div class="row">
-            <div class="col-md-6 align-self-center"><span>Last updated on 08-11-2024</span>
+            <div class="col-md-6 align-self-center"><span>Last updated on 17-11-2024</span>
               <p class="copyright-text">
                 &copy; Copyright <span id="date"></span>
                 <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
