Added rank list

--- a/admission.html
+++ b/admission.html
@@ -332,11 +332,11 @@
                       <i class="far fa-search"></i>
                     </button>
                   </div> -->
-                  <!-- <div class="nav-right-btn mt-2">
+                  <div class="nav-right-btn mt-2">
                     <a href="login.html" class="theme-btn"
                       ><span class="fal fa-pencil"></span>Apply Now</a
                     >
-                  </div> -->
+                  </div>
                 </div>
               </div>
             </div>
@@ -459,12 +459,20 @@
                       <tr>
                         <td class="text-center">2</td>
                         <td>Last Date of Submission of Application</td>
-                        <td>16.11.2024</td>
+                        <td class="d-flex flex-column flex-md-row justify-content-md-between align-items-start">
+                          
+                          <span>16.11.2024</span>
+                        <a href="#" class="btn btn-danger mt-2 mt-md-0">Closed</a>
+                        </td>
+                        
                       </tr>
                       <tr>
                         <td class="text-center">3</td>
                         <td>Publication of Rank List</td>
-                        <td>18.11.2024</td>
+                        <td class="d-flex flex-column flex-md-row justify-content-md-between align-items-start">
+                          <span>18.11.2024</span>
+                          <a class="btn btn-primary mt-2 mt-md-0" style="color: white;" href="/assets/pdf/MALABAR COLLEGE OF PHARMACY, EDAPPAL.pdf" target="_blank">Rank List</a>
+                        </td>
                       </tr>
                       <tr>
                         <td class="text-center">4</td>
@@ -748,7 +756,7 @@
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center"><span>Last updated on 17-11-2024</span>
+              <div class="col-md-6 align-self-center"><span>Last updated on 18-11-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
