--- a/index.html
+++ b/index.html
@@ -338,11 +338,11 @@ Activities</a></li>
                     <i class="far fa-search"></i>
                   </button>
                 </div> -->
-                <!-- <div class="nav-right-btn mt-2">
+                <div class="nav-right-btn mt-2">
                   <a href="login.html" class="theme-btn"
                     ><span class="fal fa-pencil"></span>Apply Now</a
                   >
-                </div> -->
+                </div>
               </div>
             </div>
           </div>
@@ -556,12 +556,18 @@ Activities</a></li>
           </div>
         </div>
       </div> -->
+
       <div class="marquee">
-        <a href="admission.html">Click here to Learn About Admission and Important Dates!</a>
+        <a href="admission.html">
+          Click here to Learn About Admission and Important Dates! 
+        </a>
+        <a href="/assets/pdf/MALABAR COLLEGE OF PHARMACY, EDAPPAL.pdf" target="_blank" style="color: red; text-decoration: none; font-weight: bold;">
+          Rank List Published!
+        </a>
       </div>
-      <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
-        <p style="margin: 0; color: #333;"><strong>Prospectus published!</strong> <a href="/prospectus2024.html" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
-      </div> -->
+      <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
+        <p style="margin: 0; color: #333;"><strong>Rank List Published!</strong> <a href="/assets/pdf/MALABAR COLLEGE OF PHARMACY, EDAPPAL.pdf" target="_blank" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
+      </div>
 
       <div class="about-area py-120" id="about-us">
         <div class="container">
@@ -2104,7 +2110,7 @@ Activities</a></li>
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center"><span>Last updated on 17-11-2024</span>
+              <div class="col-md-6 align-self-center"><span>Last updated on 18-11-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
