--- a/login.html
+++ b/login.html
@@ -143,7 +143,7 @@
                             <p>Login with your MCP account</p>
                         </div>
 
-                        <form id="loginForm">
+                        <!-- <form id="loginForm">
                             <div class="form-group">
                                 <label>Email Address</label>
                                 <input type="email" class="form-control" placeholder="Your Email" required id="email">
@@ -165,11 +165,18 @@
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
                             </div>
-                        </form>
-                        
-                        <div class="login-footer">
-                            <p>Don't have an account? <a href="register.html">Register.</a></p>
+                        </form> -->
+
+                        <div class="application-closed-notice">
+                            <p>Application closed on 16-11-2024.</p>
                         </div>
+                        <div class="rank-list-announcement">
+                            <p>Rank list published. <a href="/assets/pdf/MALABAR COLLEGE OF PHARMACY, EDAPPAL.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">View rank list</a>.</p>
+                        </div>
+                        
+                        <!-- <div class="login-footer">
+                            <p>Don't have an account? <a href="register.html">Register.</a></p>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -251,7 +258,7 @@
             <div class="copyright-wrapper">
               <div class="row">
                 <div class="col-md-6 align-self-center">
-                  <span>Last updated on 17-11-2024</span>
+                  <span>Last updated on 18-11-2024</span>
                   <p copyright-text">
                     &copy; Copyright <span id="date"></span>
                     <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
