Published first allotment list

--- a/admission.html
+++ b/admission.html
@@ -471,13 +471,16 @@
                         <td>Publication of Rank List</td>
                         <td class="d-flex flex-column flex-md-row justify-content-md-between align-items-start">
                           <span>18.11.2024</span>
-                          <a class="btn btn-primary mt-2 mt-md-0" style="color: white;" href="/assets/pdf/MALABAR COLLEGE OF PHARMACY, EDAPPAL.pdf" target="_blank">Rank List</a>
+                          <a class="btn btn-primary mt-2 mt-md-0" style="color: white;" href="/assets/pdf/MALABAR COLLEGE OF PHARMACY, EDAPPAL.pdf">Rank List</a>
                         </td>
                       </tr>
                       <tr>
                         <td class="text-center">4</td>
                         <td>Publication of First Allotment List</td>
-                        <td>19.11.2024</td>
+                        <td class="d-flex flex-column flex-md-row justify-content-md-between align-items-start">
+                          <span>19.11.2024</span>
+                          <a class="btn btn-primary mt-2 mt-md-0" style="color: white;" href="/assets/pdf/FIRST ALLOTMENT LIST.pdf">First Allotment List</a>
+                        </td>
                       </tr>
                       <tr>
                         <td class="text-center">5</td>
@@ -756,7 +759,7 @@
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center"><span>Last updated on 18-11-2024</span>
+              <div class="col-md-6 align-self-center"><span>Last updated on 19-11-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
