--- a/login.html
+++ b/login.html
@@ -139,7 +139,7 @@
                 <div class="col-md-5 mx-auto">
                     <div class="login-form">
                         <div class="login-header">
-                            <img src="assets/img/logo/logo.png" alt>
+                            <img src="assets/img/logo/logo.png" alt="logo" style="width: 200px; height: 150px; object-fit: cover;">
                             <p>Login with your MCP account</p>
                         </div>
 
@@ -171,9 +171,11 @@
                             <p>Application closed on 16-11-2024.</p>
                         </div>
                         <div class="rank-list-announcement">
-                            <p>Rank list published. <a href="/assets/pdf/MALABAR COLLEGE OF PHARMACY, EDAPPAL.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">View rank list</a>.</p>
+                            <p>Rank list published on 18-11-2024. <br><a href="/assets/pdf/MALABAR COLLEGE OF PHARMACY, EDAPPAL.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">View rank list</a>.</p>
                         </div>
-                        
+                        <div class="rank-list-announcement">
+                            <p>First allotment list published on 19-11-2024. <br><a href="/assets/pdf/FIRST ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">View first allotment list</a>.</p>
+                        </div>
                         <!-- <div class="login-footer">
                             <p>Don't have an account? <a href="register.html">Register.</a></p>
                         </div> -->
@@ -258,7 +260,7 @@
             <div class="copyright-wrapper">
               <div class="row">
                 <div class="col-md-6 align-self-center">
-                  <span>Last updated on 18-11-2024</span>
+                  <span>Last updated on 19-11-2024</span>
                   <p copyright-text">
                     &copy; Copyright <span id="date"></span>
                     <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
