--- a/index.html
+++ b/index.html
@@ -561,14 +561,13 @@ Activities</a></li>
         <a href="admission.html">
           Click here to Learn About Admission and Important Dates! 
         </a>
-        <a href="/assets/pdf/MALABAR COLLEGE OF PHARMACY, EDAPPAL.pdf" target="_blank" style="color: red; text-decoration: none; font-weight: bold;">
-          Rank List Published!
+        <a href="/assets/pdf/FIRST ALLOTMENT LIST.pdf" style="color: red; text-decoration: none; font-weight: bold;">
+          First Allotment List Published!
         </a>
       </div>
       <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
-        <p style="margin: 0; color: #333;"><strong>Rank List Published!</strong> <a href="/assets/pdf/MALABAR COLLEGE OF PHARMACY, EDAPPAL.pdf" target="_blank" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
+        <p style="margin: 0; color: #333;"><strong>First Allotment List Published!</strong> <a href="/assets/pdf/FIRST ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
       </div>
-
       <div class="about-area py-120" id="about-us">
         <div class="container">
           <div class="row align-items-center">
@@ -2110,7 +2109,7 @@ Activities</a></li>
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center"><span>Last updated on 18-11-2024</span>
+              <div class="col-md-6 align-self-center"><span>Last updated on 19-11-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
