--- a/admission.html
+++ b/admission.html
@@ -490,7 +490,10 @@
                       <tr>
                         <td class="text-center">6</td>
                         <td>Publishing the Joining and Non-Joining Candidate List</td>
-                        <td>22.11.2024</td>
+                        <td class="d-flex flex-column flex-md-row justify-content-md-between align-items-start">
+                          <span>22.11.2024</span>
+                          <a class="btn btn-primary mt-2 mt-md-0" style="color: white;" href="/assets/pdf/STUDENTS_JOINED&NOT_JOINED LIST.pdf">View list</a>
+                        </td>
                       </tr>
                       <tr>
                         <td class="text-center">7</td>
@@ -759,7 +762,7 @@
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center"><span>Last updated on 19-11-2024</span>
+              <div class="col-md-6 align-self-center"><span>Last updated on 22-11-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
