--- a/login.html
+++ b/login.html
@@ -176,6 +176,10 @@
                         <div class="rank-list-announcement">
                             <p>First allotment list published on 19-11-2024. <br><a href="/assets/pdf/FIRST ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">View first allotment list</a>.</p>
                         </div>
+                        
+                        <div class="rank-list-announcement">
+                            <p>Students joined and not joined students list published on 22-11-2024. <br><a href="/assets/pdf/STUDENTS_JOINED&NOT_JOINED LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">View list</a>.</p>
+                        </div>
                         <!-- <div class="login-footer">
                             <p>Don't have an account? <a href="register.html">Register.</a></p>
                         </div> -->
@@ -260,7 +264,7 @@
             <div class="copyright-wrapper">
               <div class="row">
                 <div class="col-md-6 align-self-center">
-                  <span>Last updated on 19-11-2024</span>
+                  <span>Last updated on 22-11-2024</span>
                   <p copyright-text">
                     &copy; Copyright <span id="date"></span>
                     <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
