Second allotment published

--- a/admission.html
+++ b/admission.html
@@ -498,7 +498,10 @@
                       <tr>
                         <td class="text-center">7</td>
                         <td>Publication of Second Allotment</td>
-                        <td>25.11.2024</td>
+                        <td class="d-flex flex-column flex-md-row justify-content-md-between align-items-start">
+                          <span>25.11.2024</span>
+                          <a class="btn btn-primary mt-2 mt-md-0" style="color: white;" href="/assets/pdf/SECOND ALLOTMENT LIST.pdf">Second Allotment List</a>
+                        </td>
                       </tr>
                       <tr>
                         <td class="text-center">8</td>
@@ -762,7 +765,7 @@
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center"><span>Last updated on 22-11-2024</span>
+              <div class="col-md-6 align-self-center"><span>Last updated on 25-11-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
