--- a/index.html
+++ b/index.html
@@ -561,16 +561,16 @@ Activities</a></li>
         <a href="admission.html">
           Click here to Learn About Admission and Important Dates! 
         </a>
-        <a href="/assets/pdf/STUDENTS_JOINED&NOT_JOINED LIST.pdf" style="color: red; text-decoration: none; font-weight: bold;">
-          Students Joined and Not Joined List Published!
+        <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: red; text-decoration: none; font-weight: bold;">
+          Second Allotment List Published!
         </a>
       </div>
       <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
-        <p style="margin: 0; color: #333;"><strong>First Allotment List Published!</strong> <a href="/assets/pdf/FIRST ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
+        <p style="margin: 0; color: #333;"><strong>Second Allotment List Published!</strong> <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
       </div>
-      <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center; margin-top: 5px;">
+      <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center; margin-top: 5px;">
         <p style="margin: 0; color: #333;"><strong>Students Joined and Not Joined List</strong> <a href="/assets/pdf/STUDENTS_JOINED&NOT_JOINED LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">View List</a></p>
-      </div>
+      </div> -->
       <div class="about-area py-120" id="about-us">
         <div class="container">
           <div class="row align-items-center">
@@ -2112,7 +2112,7 @@ Activities</a></li>
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center"><span>Last updated on 22-11-2024</span>
+              <div class="col-md-6 align-self-center"><span>Last updated on 25-11-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
