--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <nav class="navbar navbar-expand-lg">
           <div class="container position-relative">
             <a class="navbar-brand" href="/">
-              <!-- <img src="assets/img/logo/logo.png" alt="logo" /> -->
-              <span>Malabar College of Pharmacy</span>
+              <img src="assets/img/logo/logo.png" alt="logo" class="mcp_logo" />
+              <!-- <span>Malabar College of Pharmacy</span> -->
             </a>
             <div class="mobile-menu-right">
               <!-- <div class="search-btn">
@@ -161,6 +161,12 @@
 <li><a class="dropdown-item" href="course-single.html">Course Single One</a></li>
 <li><a class="dropdown-item" href="course-single-2.html">Course Single Two</a></li>
 </ul> -->
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Activities</a>
+                  <ul class="dropdown-menu fade-down">
+                    <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item mega-menu dropdown">
                   <!-- <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Academics</a> -->
@@ -1253,12 +1259,12 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".25s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="https://app.conext.in/media/Gallery/Mdcrc/IMG_0403.jpeg" alt />
+                  <img src="/assets/img/gallery/01.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="https://app.conext.in/media/Gallery/Mdcrc/IMG_0403.jpeg"
+                    href="/assets/img/gallery/01.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
@@ -1267,12 +1273,12 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".50s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="https://app.conext.in/media/Gallery/Mdcrc/IMG_8079.jpeg" alt />
+                  <img src="assets/img/gallery/02.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="https://app.conext.in/media/Gallery/Mdcrc/IMG_8079.jpeg"
+                    href="assets/img/gallery/02.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
@@ -1281,12 +1287,12 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="https://app.conext.in/media/Gallery/Mdcrc/IMG_8092.jpeg" alt />
+                  <img src="assets/img/gallery/03.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="https://app.conext.in/media/Gallery/Mdcrc/IMG_8092.jpeg"
+                    href="assets/img/gallery/03.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
@@ -1296,12 +1302,12 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".50s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="https://app.conext.in/media/Gallery/Mdcrc/c.jpeg" alt />
+                  <img src="assets/img/gallery/04.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="https://app.conext.in/media/Gallery/Mdcrc/c.jpeg"
+                    href="assets/img/gallery/04.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
@@ -1310,12 +1316,12 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="https://app.conext.in/media/Gallery/Mdcrc/DSC06469.jpeg" alt />
+                  <img src="assets/img/gallery/05.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="https://app.conext.in/media/Gallery/Mdcrc/DSC06469.jpeg"
+                    href="assets/img/gallery/05.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
@@ -1324,16 +1330,21 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="https://app.conext.in/media/Gallery/Mdcrc/f.jpeg" alt />
+                  <img src="assets/img/gallery/07.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="https://app.conext.in/media/Gallery/Mdcrc/f.jpeg"
+                    href="assets/img/gallery/07.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <a href="gallery.html" class="theme-btn">Explore Our Gallery <i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -1979,7 +1990,7 @@ Activities</a></li>
 
     <footer class="footer-area">
       <div class="footer-shape">
-        <img src="assets/img/shape/03.png" alt />
+        <img src="assets/img/logo/logo.png" alt="" class="footer-logo"  />
       </div>
       <div class="footer-widget">
         <div class="container">
