--- a/register.html
+++ b/register.html
@@ -72,7 +72,8 @@
           <nav class="navbar navbar-expand-lg">
             <div class="container position-relative">
               <a class="navbar-brand" href="/">
-                < <span>Malabar College of Pharmacy</span>
+                <img src="assets/img/logo/logo.png" alt="logo" class="mcp_logo" />
+                <!-- < <span>Malabar College of Pharmacy</span> -->
               </a>
               <div class="mobile-menu-right">
                 <button
