--- a/admission.html
+++ b/admission.html
@@ -87,8 +87,8 @@
           <nav class="navbar navbar-expand-lg">
             <div class="container position-relative">
               <a class="navbar-brand" href="/">
-                <!-- <img src="assets/img/logo/logo.png" alt="logo" /> -->
-                <span>Malabar College of Pharmacy</span>
+                <img src="assets/img/logo/logo.png" alt="logo" class="mcp_logo" />
+                <!-- <span>Malabar College of Pharmacy</span> -->
               </a>
               <div class="mobile-menu-right">
                 <!-- <div class="search-btn">
@@ -156,6 +156,12 @@
   <li><a class="dropdown-item" href="course-single-2.html">Course Single Two</a></li>
   </ul> -->
                   </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Activities</a>
+                    <ul class="dropdown-menu fade-down">
+                      <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
+                    </ul>
+                  </li>  
                   <li class="nav-item mega-menu dropdown">
                     <!-- <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Academics</a> -->
                     <!-- <div class="dropdown-menu fade-down">
@@ -632,7 +638,7 @@
 
     <footer class="footer-area">
       <div class="footer-shape">
-        <img src="assets/img/shape/03.png" alt />
+        <img src="assets/img/logo/logo.png" alt="" class="footer-logo"  />
       </div>
       <div class="footer-widget">
         <div class="container">
