--- a/careers.html
+++ b/careers.html
@@ -71,7 +71,8 @@
         <nav class="navbar navbar-expand-lg">
           <div class="container position-relative">
             <a class="navbar-brand" href="/">
-              <span>Malabar College of Pharmacy</span>
+              <img src="assets/img/logo/logo.png" alt="logo" class="mcp_logo" />
+              <!-- <span>Malabar College of Pharmacy</span> -->
             </a>
             <div class="mobile-menu-right">
               <button
@@ -102,6 +103,12 @@
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="/#courses">Courses</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Activities</a>
+                  <ul class="dropdown-menu fade-down">
+                    <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
+                  </ul>
                 </li>
 
                 <li class="nav-item">
