--- a/login.html
+++ b/login.html
@@ -72,7 +72,8 @@
           <nav class="navbar navbar-expand-lg">
             <div class="container position-relative">
               <a class="navbar-brand" href="/">
-                 <span>Malabar College of Pharmacy</span>
+                <img src="assets/img/logo/logo.png" alt="logo" class="mcp_logo" />
+                <!-- <span>Malabar College of Pharmacy</span> -->
               </a>
               <div class="mobile-menu-right">
                 <button
@@ -108,6 +109,12 @@
                   <li class="nav-item dropdown">
                     <a class="nav-link" href="/#courses">Courses</a>
                   </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Activities</a>
+                    <ul class="dropdown-menu fade-down">
+                      <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
+                    </ul>
+                  </li>  
                   <li class="nav-item">
                     <a class="nav-link" href="/#contact-us">Contact</a>
                   </li>
@@ -196,7 +203,7 @@
 
     <footer class="footer-area">
         <div class="footer-shape">
-          <img src="assets/img/shape/03.png" alt />
+          <img src="assets/img/logo/logo.png" alt="" class="footer-logo"  />
         </div>
         <div class="footer-widget">
           <div class="container">
