--- a/prospectus2024.html
+++ b/prospectus2024.html
@@ -80,7 +80,8 @@
         <nav class="navbar navbar-expand-lg">
           <div class="container position-relative">
             <a class="navbar-brand" href="/">
-              <span>Malabar College of Pharmacy</span>
+              <img src="assets/img/logo/logo.png" alt="logo" class="mcp_logo" />
+              <!-- <span>Malabar College of Pharmacy</span> -->
             </a>
             <div class="mobile-menu-right">
               <button
@@ -102,7 +103,7 @@
                   <a class="nav-link active" href="/">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="#about-us">About Us</a>
+                  <a class="nav-link" href="/#about-us">About Us</a>
                 </li>
                 
                 <li class="nav-item dropdown">
@@ -114,10 +115,16 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="#courses">Courses</a>
+                  <a class="nav-link" href="/#courses">Courses</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Activities</a>
+                  <ul class="dropdown-menu fade-down">
+                    <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#contact-us">Contact</a>
+                  <a class="nav-link" href="/#contact-us">Contact</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/careers.html">Careers</a>
@@ -140,7 +147,7 @@
     <main style="font-family: Arial, sans-serif; line-height: 1.6; background-color: #f4f4f4; padding: 20px;">
         <div style="max-width: 950px; margin: 0 auto; background-color: #fff; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
             <header style="text-align: center; margin-bottom: 30px;">
-              <img src="assets/img/logo/logo.png" alt="logo" style="width: 200px; height: 200px;">
+              <img src="assets/img/logo/logo.png" alt="logo" style="width: 300px; height: auto">
                 <h1 style="font-size: 2.5em; color: #003366;">Malabar College of Pharmacy</h1>
                 <p style="font-size: 1.2em; color: #666;">Under Malabar Educational and Charitable Trust</p>
                 <p style="font-size: 1.1em; color: #666;">Manoor-Chekanoor Road, Mudur, PO-679578, Edappal, Malappuram, Kerala</p>
@@ -379,7 +386,7 @@
 
 <footer class="footer-area">
     <div class="footer-shape">
-      <img src="assets/img/shape/03.png" alt />
+      <img src="assets/img/logo/logo.png" alt="" class="footer-logo"  />
     </div>
     <div class="footer-widget">
       <div class="container">
