--- a/index.html
+++ b/index.html
@@ -1341,6 +1341,48 @@ Activities</a></li>
                 </div>
               </div>
             </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
+              <div class="gallery-item">
+                <div class="gallery-img">
+                  <img src="assets/img/gallery/16.jpeg" alt />
+                </div>
+                <div class="gallery-content">
+                  <a
+                    class="popup-img gallery-link"
+                    href="assets/img/gallery/16.jpeg"
+                    ><i class="fal fa-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
+              <div class="gallery-item">
+                <div class="gallery-img">
+                  <img src="assets/img/gallery/13.jpeg" alt />
+                </div>
+                <div class="gallery-content">
+                  <a
+                    class="popup-img gallery-link"
+                    href="assets/img/gallery/13.jpeg"
+                    ><i class="fal fa-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
+              <div class="gallery-item">
+                <div class="gallery-img">
+                  <img src="assets/img/gallery/14.jpeg" alt />
+                </div>
+                <div class="gallery-content">
+                  <a
+                    class="popup-img gallery-link"
+                    href="assets/img/gallery/14.jpeg"
+                    ><i class="fal fa-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="row">
             <div class="col-lg-12 text-center">
