Updated admission process

--- a/admission.html
+++ b/admission.html
@@ -517,7 +517,10 @@
                       <tr>
                         <td class="text-center">9</td>
                         <td>Publishing the Joining and Non-Joining Candidate List</td>
-                        <td>27.11.2024</td>
+                        <td class="d-flex flex-column flex-md-row justify-content-md-between align-items-start">
+                          <span>27.11.2024</span>
+                          <a class="btn btn-primary mt-2 mt-md-0" style="color: white;" href="/assets/pdf/JOINED STUDENT LIST OF SECOND ALLOTMENT.pdf">View list</a>
+                        </td>
                       </tr>
                       <tr>
                         <td class="text-center">10</td>
@@ -771,7 +774,7 @@
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center"><span>Last updated on 25-11-2024</span>
+              <div class="col-md-6 align-self-center"><span>Last updated on 27-11-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
