--- a/index.html
+++ b/index.html
@@ -570,9 +570,16 @@ Activities</a></li>
         <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: red; text-decoration: none; font-weight: bold;">
           Second Allotment List Published!
         </a>
+        <span style="color: black; font-weight: bold;">&nbsp; | &nbsp;</span>
+        <a href="/assets/pdf/JOINED STUDENT LIST OF SECOND ALLOTMENT.pdf" style="color: red; text-decoration: none; font-weight: bold;">
+          Joined Students List of Second Allotment published!
+        </a>
       </div>
       <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
         <p style="margin: 0; color: #333;"><strong>Second Allotment List Published!</strong> <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
+      </div>
+      <div class="notification-bar" style="margin-top: 2px; background-color: #f2f2f2; padding: 10px; text-align: center;">
+        <p style="margin: 0; color: #333;"><strong>Joined Students List of Second Allotment</strong> <a href="/assets/pdf/Joined Student List of Second Allotment.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
       </div>
       <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center; margin-top: 5px;">
         <p style="margin: 0; color: #333;"><strong>Students Joined and Not Joined List</strong> <a href="/assets/pdf/STUDENTS_JOINED&NOT_JOINED LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">View List</a></p>
@@ -1259,12 +1266,12 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".25s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="/assets/img/gallery/01.jpeg" alt />
+                  <img src="/assets/img/gallery/11.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="/assets/img/gallery/01.jpeg"
+                    href="/assets/img/gallery/11.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
@@ -1273,12 +1280,12 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".50s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="assets/img/gallery/02.jpeg" alt />
+                  <img src="assets/img/gallery/12.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="assets/img/gallery/02.jpeg"
+                    href="assets/img/gallery/12.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
@@ -1287,12 +1294,12 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="assets/img/gallery/03.jpeg" alt />
+                  <img src="assets/img/gallery/13.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="assets/img/gallery/03.jpeg"
+                    href="assets/img/gallery/13.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
@@ -1302,12 +1309,12 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".50s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="assets/img/gallery/04.jpeg" alt />
+                  <img src="assets/img/gallery/14.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="assets/img/gallery/04.jpeg"
+                    href="assets/img/gallery/14.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
@@ -1316,26 +1323,12 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="assets/img/gallery/05.jpeg" alt />
+                  <img src="assets/img/gallery/15.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="assets/img/gallery/05.jpeg"
-                    ><i class="fal fa-plus"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
-              <div class="gallery-item">
-                <div class="gallery-img">
-                  <img src="assets/img/gallery/07.jpeg" alt />
-                </div>
-                <div class="gallery-content">
-                  <a
-                    class="popup-img gallery-link"
-                    href="assets/img/gallery/07.jpeg"
+                    href="assets/img/gallery/15.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
@@ -1358,12 +1351,12 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="assets/img/gallery/13.jpeg" alt />
+                  <img src="assets/img/gallery/17.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="assets/img/gallery/13.jpeg"
+                    href="assets/img/gallery/17.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
@@ -1372,12 +1365,96 @@ Activities</a></li>
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="assets/img/gallery/14.jpeg" alt />
+                  <img src="assets/img/gallery/18.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="assets/img/gallery/14.jpeg"
+                    href="assets/img/gallery/18.jpeg"
+                    ><i class="fal fa-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
+              <div class="gallery-item">
+                <div class="gallery-img">
+                  <img src="assets/img/gallery/19.jpeg" alt />
+                </div>
+                <div class="gallery-content">
+                  <a
+                    class="popup-img gallery-link"
+                    href="assets/img/gallery/19.jpeg"
+                    ><i class="fal fa-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
+              <div class="gallery-item">
+                <div class="gallery-img">
+                  <img src="assets/img/gallery/20.jpeg" alt />
+                </div>
+                <div class="gallery-content">
+                  <a
+                    class="popup-img gallery-link"
+                    href="assets/img/gallery/20.jpeg"
+                    ><i class="fal fa-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
+              <div class="gallery-item">
+                <div class="gallery-img">
+                  <img src="assets/img/gallery/21.jpeg" alt />
+                </div>
+                <div class="gallery-content">
+                  <a
+                    class="popup-img gallery-link"
+                    href="assets/img/gallery/21.jpeg"
+                    ><i class="fal fa-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
+              <div class="gallery-item">
+                <div class="gallery-img">
+                  <img src="assets/img/gallery/24.jpeg" alt />
+                </div>
+                <div class="gallery-content">
+                  <a
+                    class="popup-img gallery-link"
+                    href="assets/img/gallery/24.jpeg"
+                    ><i class="fal fa-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
+              <div class="gallery-item">
+                <div class="gallery-img">
+                  <img src="assets/img/gallery/25.jpeg" alt />
+                </div>
+                <div class="gallery-content">
+                  <a
+                    class="popup-img gallery-link"
+                    href="assets/img/gallery/25.jpeg"
+                    ><i class="fal fa-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
+              <div class="gallery-item">
+                <div class="gallery-img">
+                  <img src="assets/img/gallery/26.jpg" alt />
+                </div>
+                <div class="gallery-content">
+                  <a
+                    class="popup-img gallery-link"
+                    href="assets/img/gallery/26.jpg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
@@ -2165,7 +2242,7 @@ Activities</a></li>
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center"><span>Last updated on 25-11-2024</span>
+              <div class="col-md-6 align-self-center"><span>Last updated on 27-11-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
