--- a/login.html
+++ b/login.html
@@ -189,6 +189,10 @@
                         <div class="rank-list-announcement">
                           <p>Second allotment list published on 25-11-2024. <br><a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">View second allotment list</a>.</p>
                       </div>
+                      
+                        <div class="rank-list-announcement">
+                          <p>Joined students list of second allotment published on 27-11-2024. <br><a href="/assets/pdf/JOINED STUDENT LIST OF SECOND ALLOTMENT.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">View joined student list</a>.</p>
+                      </div>
 
                         
                         <!-- <div class="login-footer">
@@ -275,7 +279,7 @@
             <div class="copyright-wrapper">
               <div class="row">
                 <div class="col-md-6 align-self-center">
-                  <span>Last updated on 25-11-2024</span>
+                  <span>Last updated on 27-11-2024</span>
                   <p copyright-text">
                     &copy; Copyright <span id="date"></span>
                     <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
