--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ Activities</a></li>
         <p style="margin: 0; color: #333;"><strong>Second Allotment List Published!</strong> <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
       </div>
       <div class="notification-bar" style="margin-top: 2px; background-color: #f2f2f2; padding: 10px; text-align: center;">
-        <p style="margin: 0; color: #333;"><strong>Joined Students List of Second Allotment</strong> <a href="/assets/pdf/Joined Student List of Second Allotment.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
+        <p style="margin: 0; color: #333;"><strong>Joined Students List of Second Allotment</strong> <a href="/assets/pdf/JOINED STUDENT LIST OF SECOND ALLOTMENT.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
       </div>
       <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center; margin-top: 5px;">
         <p style="margin: 0; color: #333;"><strong>Students Joined and Not Joined List</strong> <a href="/assets/pdf/STUDENTS_JOINED&NOT_JOINED LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">View List</a></p>
